--- a/NFV_Project/trydjango19/src/templates/Developer.html
+++ b/NFV_Project/trydjango19/src/templates/Developer.html
@@ -209,7 +209,7 @@
           <!-- Nav tabs -->
             <ul id="devTabs" class="nav nav-tabs" role="tablist">
                 <li class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Create Catalog</a></li>
-                <li><a href="#viewCatalog" aria-controls="view" role="tab" data-toggle="tab">View Catalogs</a></li>
+                <!--<li><a href="#viewCatalog" aria-controls="view" role="tab" data-toggle="tab">View Catalogs</a></li>-->
             </ul>
 
             <!-- Tab panes -->
