--- a/NFV_Project/trydjango19/src/templates/Enterprise.html
+++ b/NFV_Project/trydjango19/src/templates/Enterprise.html
@@ -159,6 +159,7 @@
         });
 
         $.getJSON(ip+'/admin/listEnterpriseCatalog',function(CatalogResults){
+            blockUI();
             table = $("#EnterpriseDetails");
             columnCount = 0;
             for (var i = 0; i < CatalogResults.length; i++){
@@ -184,6 +185,7 @@
                 //table.append(tr);
 
             }
+            unblockUI();
 
             });
     });
@@ -191,11 +193,12 @@
     function deployCatalog(thisObj, catalogId, vnfdTemplateId, vndfname){
         var r = confirm("Do you want to deploy: " + vndfname);
         if (r == true) {
+            blockUI();
             $.ajax({
                 type: "GET",
                 url:ip+"/enterprise/DeployVnfdTemplate?vnfTemplateId="+vnfdTemplateId+"&vndfname="+vndfname,
                 success: function(json){
-                    $.unblockUI;
+                    unblockUI();
                     if(json.status == "success"){
                         alert("VNF Deployed Successfully");
                     }else{
@@ -206,6 +209,19 @@
                 dataType: 'json'
             });
         }
+
+    }
+
+    function blockUI(){
+        $("#blockUI").show();
+        $("#blockUIContent").show();
+
+    }
+
+
+    function unblockUI(){
+        $("#blockUI").hide();
+        $("#blockUIContent").hide();
 
     }
 
@@ -305,6 +321,9 @@
     <script>
 
     </script>
-   
+    <div id="blockUI" class="blockUI blockOverlay" style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: rgb(0, 0, 0); opacity: 0.6; cursor: wait; position: fixed;"></div>
+    <div id="blockUIContent" class="blockUI blockMsg blockPage" style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 30%; top: 40%; left: 35%; text-align: center; color: rgb(0, 0, 0); border: 3px solid rgb(170, 170, 170); background-color: rgb(255, 255, 255); cursor: wait;">
+        <h1>Please wait...</h1>
+    </div>
 </body>
 </html>
